kubernetes/apps/beszel/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: beszel
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "beszel.k8s.local"
  rules:
    - backendRefs:
        - name: beszel
          port: 8090
